# Reduce_LVLMs_Hallucination

./: .gitignore  README.md  pyproject.toml
analysis_puzzles/: summary_report.md
dx&llava/: DINOX-Llava_Experimentation.ipynb  DX&LLaVA_requirements.txt  README.md
dx_llava/: DINOX-Llava_Experimentation.ipynb  DX&LLaVA_main.py  README.md
language_methods/: README.md  pyproject.toml
language_methods/analysis_pope/: summary_report.md
language_methods/lvlm_models/: pyproject.toml
language_methods/lvlm_models/src/lvlm_models/: __init__.py  chain_of_thought.py  openai.py
language_methods/research/: analyze_resulst.py  llava_cot_puzzles.csv  models-testing.py  openai_costs.py  pope_testing.py  sv_testing.py
language_methods/results_pope/: gemma-3-4b-it_200_cot_results.csv  gpt-4.1-mini-2025-04-14_200_cot_results.csv  gpt-4.1-mini-2025-04-14_200_sv_results.csv  llava-1.5-7b-hf_200_sv_results.csv  pope_normal_llava_results.json  pope_yolo_llava_results.json
language_methods/results_puzzles/: gpt-4.1-mini-2025-04-14_2_sv_results.csv
language_methods/scripts/: README_analysis.md  analyze_results.py  demo.py  object_detection.py  visual_puzzles.py
lvlm_models/: pyproject.toml
lvlm_models/src/lvlm_models/: __init__.py  base_lvlm.py  chain_of_thought.py  gemma3.py  llava.py  openai.py  self_verification.py  visual_puzzle_example.py
models/: pyproject.toml
models/src/examples/: visual_puzzle_example.py
research/: analyze_resulst.py  cot_testing.py  llava_cot_puzzles_2.csv  llava_sv_puzzles.csv  sv_testing.py
results/: cot_results.csv  gemma-3-4b-it_200_cot_results.csv  gemma-3-4b-it_200_sv_results.csv  gpt-4.1-mini-2025-04-14_200_cot_results.csv  gpt-4.1-mini-2025-04-14_200_sv_results.csv  llava-1.5-7b-hf_200_sv_results.csv  sv_results.csv
results_pope/: gemma-3-4b-it_200_sv_results.csv  llava-1.5-7b-hf_200_cot_results.csv
results_puzzles/: gpt-4.1-mini-2025-04-14_200_cot_results.csv  gpt-4.1-mini-2025-04-14_200_sv_results.csv  gpt-4.1-mini-2025-04-14_2_cot_results.csv
scripts/: demo.py  object_detection.py  visual_puzzles.py
yolo_llava/: README.md  YOLO_+_LLAVA_pope.ipynb  testing_yolo_llava.ipynb  yolo+llava_pope.py
(+1 files in other folders)
